# xtensor-zarr

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  environment-dev.yml  xtensor-zarr.pc.in  xtensor-zarrConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux.yml  unix-build.yml
binder/: environment.yml
docs/: Doxyfile  environment.yml
docs/source/: api_reference.rst  basic_usage.rst  conf.py  dev-build-options.rst  index.rst  installation.rst  releasing.rst
examples/: big_data.ipynb  explore_hierarchy.ipynb  introduction.ipynb  xtensor-zarr-gdal.ipynb  zarr_v2.ipynb  zarr_v3.ipynb  zarr_v3_example.cpp
include/xtensor-zarr/: hierarchy.hpp  xtensor-zarr.hpp  xtensor_zarr_config.hpp  xtensor_zarr_config_cling.hpp.in  xzarr_array.hpp  xzarr_attrs.hpp  xzarr_aws_store.hpp  xzarr_chunked_array.hpp  xzarr_common.hpp  xzarr_compressor.hpp  xzarr_file_system_store.hpp  xzarr_gcs_store.hpp  xzarr_gdal_store.hpp  xzarr_group.hpp  xzarr_hierarchy.hpp  xzarr_node.hpp  zarray.hpp
src/: shared.cpp  xtensor-zarr-gdal.cpp  xtensor-zarr-local.cpp
test/: CMakeLists.txt  test0.py  test_aws.cpp  test_gcs.cpp  test_gdal.cpp  test_zarr.cpp  zarr_read.py  zarr_write.py  zarrita_read.py  zarrita_write.py
